--- a/packages/instant-apps-components/src/components/instant-apps-language-switcher/instant-apps-language-switcher.scss
+++ b/packages/instant-apps-components/src/components/instant-apps-language-switcher/instant-apps-language-switcher.scss
@@ -1,3 +1,73 @@
 :host {
   display: block;
+
+  .instant-apps-language-switcher {
+    &__header {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+    }
+
+    &__header-text {
+      font-size: 18px;
+    }
+
+    &__saving-indicator {
+      display: flex;
+      align-items: center;
+      font-size: 14.5px;
+      color: var(--calcite-ui-brand);
+    }
+
+    &__close-button {
+      width: 175px;
+    }
+
+    &__header-tip {
+      padding: 20px;
+    }
+
+    &__top-bar {
+      display: flex;
+      width: 100%;
+
+      calcite-label {
+        --calcite-label-margin-bottom: 0;
+        font-weight: var(--calcite-font-weight-medium);
+      }
+
+      &-section {
+        box-sizing: border-box;
+        display: flex;
+        align-items: center;
+        width: 50%;
+        padding: 0.5%;
+      }
+    }
+
+    &__user-lang-text {
+      font-weight: var(--calcite-font-weight-medium);
+    }
+
+    &__top-bar-section:first-child {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    &__top-bar-section:nth-child(2) {
+      calcite-select {
+        width: 255px;
+      }
+    }
+
+    &__minimize-search-container {
+      display: flex;
+      justify-content: space-between;
+
+      calcite-input {
+        width: 300px;
+        margin-left: 30px;
+      }
+    }
+  }
 }
